<resources>
    <string name="database_name">database.db</string>

    <string name="currTrip">Reise Reise</string>

    <string name="app_name">TravelBuddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Thailand</string>
    <string name="nav_header_subtitle">Marvin</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Einstellungen</string>

    <string name="menu_trips">Deine Reisen</string>
    <string name="menu_stops">Stops</string>
    <string name="menu_diary">Tagebuch</string>
    <string name="menu_documents">Dokumente</string>
    <string name="menu_packinglist">Packliste</string>
    <string name="menu_finances">Finanzen</string>
    <string name="menu_debts">Schulden</string>
    <string name="menu_debug">Debug</string>

    <string name="createTrip_InfoTitle">Neue Reise | Infos</string>
    <string name="createTrip_image_description">Bild der Reise</string>
    <string name="createTrip_name_hint">Name</string>
    <string name="createTrip_startDate_hint">Start-Datum</string>
    <string name="createTrip_until">bis</string>
    <string name="createTrip_endDate_hint">End-Datum</string>

    <string name="createStop_InfoTitle">Neuer Stop</string>
    <string name="createStop_name_hint">Name</string>

    <string name="stopDetail_stopName">Stopname</string>
    <string name="stopDetail_accommodation">Unterkunft</string>
    <string name="stopDetail_accommodationHint">Name der Unterkunft</string>
    <string name="stopDetail_toDo">To-do</string>
    <string name="stopDetail_notes">Notizen</string>

    <string name="stopDetail_menu_share">Teilen</string>
    <string name="stopDetail_menu_tripadvisor">Tripadvisor</string>
    <string name="stopDetail_menu_weather">Wetter</string>

    <string name="packingList_own">EIGENE</string>
    <string name="packingList_shared">GETEILT</string>

    <string name="error_entername">Bitte Namen angeben!</string>
    <string name="error_enterdate">Bitte Datum angeben!</string>

    <string name="trip_type_hotel">Hotelreise</string>
    <string name="trip_type_circular">Rundreise</string>
    <string name="trip_type_backpacking">Rucksack-Rundreise</string>
    <string name="trip_type_festival">Festival</string>
    <string name="trip_type_camping">Camping-Urlaub</string>
    <string name="trip_type_other">Andere</string>

    <string-array name="stop_salutations">
        <item>Hallo ihr Lieben,</item>
        <item>Hallihallo,</item>
        <item>Guten Tacho,</item>
        <item>Hallöchen,</item>
        <item>Tachchen,</item>
        <item>Hallo ihr Nutten,</item>
        <item>Hallo ihr Süßis,</item>
        <item>Hallo ihr Schweinebacken,</item>
        <item>Howdy Freunde,</item>
        <item>Gude,</item>
        <item>Moin Moin,</item>
        <item>Grüß Gott,</item>
        <item>Serwuss Erdnuss,</item>
        <item>Bongiorno John Porno,</item>
    </string-array>

    <string-array name="stop_arrivals">
        <item>bin gerade in $stop angekommen.</item>
        <item>wir sind gleich in $stop.</item>
        <item>gleich erreichen wir $stop.</item>
        <item>$stop ist schon in Sichtweite.</item>
        <item>nicht mehr weit bis $stop.</item>
        <item>ich melde mich aus $stop.</item>
        <item>$stop ist wirklich sehr schön.</item>
        <item>$stop ist bis jetzt der Höhepunkt.</item>
        <item>$stop ist unfassbar schön.</item>
        <item>$stop besticht durch ihre dominante Schönheit.</item>
        <item>$stop ist meine Herrin und ich werde $stop bis an mein Lebensende dienen.</item>
        <item>es ist so schön in $stop. Ich glaube, ich bleibe bis an mein Lebensende hier.</item>
    </string-array>

    <string-array name="stop_closings">
        <item>Bis Denver!</item>
        <item>Bis Baldrian!</item>
        <item>Melde mich!</item>
        <item>Tschau Kakau.</item>
        <item>Schreibe euch dann später.</item>
        <item>Freue mich schon.</item>
        <item>Bis Spätersile.</item>
        <item>Machts gut, ihr Nutten.</item>
        <item>Tschüssli Müsli.</item>
        <item>Bleibt sauber.</item>
        <item>San Frantschüssco.</item>
        <item>Lasst die Finger von harten Drogen.</item>
        <item>Halt die Ohren steif, du Aff!</item>
        <item>Gruß und Kuss!</item>
    </string-array>

</resources>
